--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -2377,7 +2377,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, 
-  FEATURE_N = {not specified},
+  FEATURE_N = {150 PCA features},
   PARTICIPANT_N = {10 per clip (100 qualified workers)},
   PARTICIPANT_EXPERTISE = {Nonexperts (Mturk) + experts},
   PARTICIPANT_ORIGIN = {MTurk},
