--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -168,7 +168,7 @@ bind_field(
   'classification_precision.mean' = mean(c(.8308,.8828,.8488,.9299)),
   'classification_recall.mean' = mean(c(.8083,.8446,.8353,.7392))
   ),
-  'spotify.random forest.spotify.acousticBrainz.model validation' = c('classification_accuracy.mean' = mean(c(0.694,0.705,0.771,0.729)),
+  'spotify.random forest.spotify.acousticBrainz.model validation' = c('classification_accuracy' = mean(c(0.694,0.705,0.771,0.729)),
                                                                       'classification_f1.mean' = mean(c(0.623,0.700,0.745,0.719)),
 						       'classification_class.n' = 4)
 )
