--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -216,6 +216,12 @@ Figure 3. Forest plot of arousal prediction (Max?) (Unless we do some custom plo
 
 -   Figure Optional: Funnel plot (I haven't seen this yet)
 
+### 
+
+secondary datasets, include a table, with an index of which studies/counts 
+
+TABLE
+
 # Conclusion and Discussion
 
 ## Concise summary of what we did and found
